# comfyui-scene-composer

./: .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  workflow.json
config/: actions.toml  character.toml  character.yaml  clothes.toml  clothes.yaml  composition.toml  composition.yaml  environment.toml  environment.yaml
js/: cozy_spoke.js  widgethider.js
py/: cozy_spoke.py  node.py  scene.py
py/components/: action.py  clothes.py  composition.py  environment.py
py/components/action/: action.py  expression.py  nsfw.py  sfw.py
py/components/character/: attitude.py  body.py  character.py  eyes.py  hair.py
py/lib/: cozy_spoke.py
src/: components.py  data.py  node.py  scene.py  utils.py
src/action/: action.py
src/character/: body.py  character.py  eyes.py  hair.py
src/character/clothes/: clothes.py  piece.py
src/components/: action.py  clothes.py  composition.py  environment.py
src/components/action/: action.py  nsfw.py
src/components/character/: body.py  character.py  eyes.py  hair.py
src/composition/: action.py  composition.py  protagonists.py
src/environment/: environment.py
src/scene/: component.py  scene.py
src/subject/: body.py  character.py  clothes.py  eyes.py  hair.py  subject.py
src/subject/clothes/: clothes.py  piece.py
